e2e/linodecluster-controller/firewall-integration/check-resource-deleted.yaml
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
kind: LinodeCluster
metadata:
  name: ($cluster)
---
apiVersion: cluster.x-k8s.io/v1beta1
kind: Cluster
metadata:
  name: ($cluster)
---
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
kind: LinodeFirewall
metadata:
  name: ($firewall)
  labels:
      cluster.x-k8s.io/cluster-name: ($cluster)
