e2e/linodecluster-controller/firewall-integration/create-cluster.yaml
apiVersion: cluster.x-k8s.io/v1beta1
kind: Cluster
metadata:
  name: ($cluster)
spec:
  infrastructureRef:
    apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
    kind: LinodeCluster
    name: ($cluster)
