e2e/linodecluster-controller/firewall-integration/create-linodecluster.yaml
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
kind: LinodeCluster
metadata:
  name: ($cluster)
spec:
  nodeBalancerFirewallRef:
    apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
    kind: LinodeFirewall
    name: ($firewall)
  region: us-sea
