e2e/linodecluster-controller/firewall-integration/assert-firewall.yaml
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
kind: LinodeFirewall
metadata:
  name: ($firewall)
spec:
  enabled: true
status:
  ready: true
